--- a/conf/emr/security-configuration-template-ext.json
+++ b/conf/emr/security-configuration-template-ext.json
@@ -5,8 +5,8 @@
       "ExternalKdcConfiguration": {
         "TicketLifetimeInHours": 24,
         "KdcServerType": "Single",
-        "AdminServer": "@TRUSTING_HOST@",
-        "KdcServer": "@TRUSTING_HOST@"
+        "AdminServer": "@TRUSTING_HOST@:749",
+        "KdcServer": "@TRUSTING_HOST@:88"
       }
     }
   },
@@ -31,11 +31,6 @@
           "App":"EMRFS-S3",
           "ClientSecretARN":"@RANGER_PLUGIN_SECRET_ARN@",
           "PolicyRepositoryName":"emrfs"
-        },
-        {
-          "App":"Trino",
-          "ClientSecretARN":"@RANGER_PLUGIN_SECRET_ARN@",
-          "PolicyRepositoryName":"trino"
         }
       ],
       "AuditConfiguration":{
