modify intransit config and fix kdc.conf do not update issue

--- a/conf/emr/security-configuration-template-ext.json
+++ b/conf/emr/security-configuration-template-ext.json
@@ -4,8 +4,7 @@
 		"EnableAtRestEncryption": false,
 		"InTransitEncryptionConfiguration": {
 			"TLSCertificateConfiguration": {
-				"CertificateProviderType": "PEM",
-				"S3Object": "@INTRANSITPEMS3OBJECT@"
+				"CertificateProviderType": "PEM"
 			}
 		}
 	},
