--- a/conf/emr/security-configuration-template-ext.json
+++ b/conf/emr/security-configuration-template-ext.json
@@ -4,7 +4,8 @@
 		"EnableAtRestEncryption": false,
 		"InTransitEncryptionConfiguration": {
 			"TLSCertificateConfiguration": {
-				"CertificateProviderType": "PEM"
+				"CertificateProviderType": "PEM",
+        "S3Object": ""
 			}
 		}
 	},
