--- a/conf/emr/security-configuration-template-ext.json
+++ b/conf/emr/security-configuration-template-ext.json
@@ -5,7 +5,7 @@
 		"InTransitEncryptionConfiguration": {
 			"TLSCertificateConfiguration": {
 				"CertificateProviderType": "PEM",
-        "S3Object": ""
+        "S3Object": "@INTRANSITPEMS3OBJECT@"
 			}
 		}
 	},
