--- a/conf/emr/security-configuration-template.json
+++ b/conf/emr/security-configuration-template.json
@@ -1,4 +1,14 @@
 {
+  "EncryptionConfiguration": {
+		"EnableInTransitEncryption": true,
+		"EnableAtRestEncryption": false,
+		"InTransitEncryptionConfiguration": {
+			"TLSCertificateConfiguration": {
+				"CertificateProviderType": "PEM",
+        "S3Object": "@INTRANSITPEMS3OBJECT@"
+			}
+		}
+	},
   "AuthenticationConfiguration": {
     "KerberosConfiguration": {
       "Provider": "ClusterDedicatedKdc",
@@ -34,6 +44,11 @@
           "App":"EMRFS-S3",
           "ClientSecretARN":"@RANGER_PLUGIN_SECRET_ARN@",
           "PolicyRepositoryName":"emrfs"
+        },
+        {
+          "App":"Trino",
+          "ClientSecretARN":"@RANGER_PLUGIN_SECRET_ARN@",
+          "PolicyRepositoryName":"trino"
         }
       ],
       "AuditConfiguration":{
